--- a/packages/d015_Node/package.json
+++ b/packages/d015_Node/package.json
@@ -18,10 +18,16 @@
     "url": "git+https://github.com/xunscript2022/demoCollection.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "start": "nodemon express.js"
   },
   "bugs": {
     "url": "https://github.com/xunscript2022/demoCollection/issues"
   },
-  "homepage": "https://github.com/xunscript2022/demoCollection#readme"
+  "homepage": "https://github.com/xunscript2022/demoCollection#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
